# BookJo

./: .gitignore  DockerFile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
config/: settings.py
src/: load-scripts.sh  manage.py  pyproject.toml  requirements.txt
src/apps/core/: models.py  schemas.py  serializers.py  urls.py  views.py
src/apps/core/service/: auth_serivce.py
src/common/: exceptions.py  model.py  permissions.py  view.py
src/config/: __init__.py  celery.py  urls.py  wsgi.py
src/config/env/: .env.example
src/config/settings/: base.py  development.py  production.py
src/scripts/: entry-point.sh  remove-migrations.sh
