[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5.3",
    "django>=5.2.6",
    "django-celery-beat>=2.8.1",
    "django-cors-headers>=4.8.0",
    "django-environ>=0.12.0",
    "django-lifecycle>=1.2.4",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "pre-commit>=4.3.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "redis>=5.2.1",
    "ruff>=0.13.0",
]


[tool.ruff]
line-length = 88
exclude = ["docs/", "**/migrations/", ".gitignore"]

[tool.ruff.format]
quote-style = "double"
